# advent_of_code_2024

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  days.cppm  enum.cppm  parse.cppm  runner.cppm  types.cppm
src/day_01/: day_01.cpp  day_01.hpp
src/day_02/: day_02.cpp  day_02.hpp  main.cpp
src/day_03/: day_03.cpp  day_03.hpp  main.cpp
src/day_04/: day_04.cpp
src/day_05/: day_05.cpp  day_05.hpp
src/day_06/: day_06.cpp  day_06.hpp
src/day_07/: day_07.cpp
src/day_08/: day_08.cpp
src/day_09/: day_09.cpp
src/day_10/: day_10.cpp  day_10.hpp
src/day_11/: day_11.cpp
src/day_12/: main.cpp
src/day_13/: day_13.cpp
src/day_14/: day_14.cpp
src/day_15/: day_15.cpp  day_15.hpp
src/day_16/: day_16.cpp
src/days/: day_01.cppm  day_02.cppm  day_03.cppm  day_04.cppm  day_05.cppm  day_06.cppm  day_07.cppm  day_08.cppm  day_09.cppm  day_10.cppm  day_11.cppm  day_12.cppm  day_13.cppm  day_14.cppm  day_15.cppm  day_16.cppm  day_17.cppm  day_18.cppm  day_19.cppm  day_20.cppm  day_21.cppm  day_22.cppm  day_23.cppm  day_24.cppm
tests/: CMakeLists.txt  day_01_test.cpp  day_02_test.cpp  day_03_test.cpp  day_04_test.cpp  day_05_test.cpp  day_06_test.cpp  day_07_test.cpp  day_08_test.cpp  day_09_test.cpp  day_10_test.cpp  day_11_test.cpp  day_13_test.cpp  day_14_test.cpp  day_15_test.cpp
